testing policies/mutate/patchStrategicMerge/2Rule_2Resource/patch2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    foo: bar
    color: orange
spec:
  containers:
  - name: nginx
    image: nginx:latest
